Change Arrays to Go Native Arrays in generated Code
- This is the first step in a longer process of refactoring the
  way zserio arrays are generated.
- Currently, zserio arrays are generated to a templated struct
  "zserio.Array", which contains a field "RawArray". This is
  very user-unfriendly, and prevents from generating struct
  tags (e.g. for convenient json de/encoding).
- This commit replaces the zserio.Array field from the generated
  structs, and uses go native arrays instead. This makes using
  the generated code much easier.
- The zserio.Array objects are still used, but instead of being
  struct fields, they are now created whenever the struct is
  marshalled / unmarshalled.
- While this approach is more user-friendly, it has the drawback
  that some data conversion and copying is needed, whenever the
  data is serialized. For example, arrays of zserio objects
  now need to be converted from array of struct to array of pointer
  to struct to work with the generic approach. This is something
  that should be improved in the future.

--- a/internal/generator/templates/array_init.go.tmpl
+++ b/internal/generator/templates/array_init.go.tmpl
@@ -1,18 +1,27 @@
-{{ $scope := .pkg }}
-{{ $field_name := .field_name }}
-{{ $array := .array }}
-{{ $type := .type }}
-{{- $traits := goArrayTraits $scope $type }}
 
-{{- $field_name }}.ArrayTraits = {{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $type }}
-{{- if $array.IsPacked }}
-    {{ $field_name }}.IsPacked = true
-{{- end }}
-{{- if $array.Length }}
-    {{ $field_name }}.FixedSize = int({{ goExpression $scope $array.Length }})
+{{- $scope := .pkg }}
+{{- $field_name := .field_name }}
+{{- $field := .field }}
+{{- $native := .native }}
+{{- $traits := goArrayTraits $scope $native.Type }}
+{{ $field.Name }}ArrayProperties := ztype.Array[{{if $native.IsMarshaler }}*{{ end }}{{ goType $scope $native.Type }}, {{ template "array_traits_type.go.tmpl" dict "pkg" $scope "type" $native.Type }}]{}
+{{ $field.Name }}ArrayProperties.ArrayTraits = {{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}
+
+{{- if $native.IsMarshaler }}
+    {{ $field.Name }}PtrArray := make([]*{{ goType $scope $native.Type }}, 0)
+    {{ $field.Name }}ArrayProperties.RawArray = &{{ $field.Name }}PtrArray
 {{- else }}
-    {{ $field_name }}.IsAuto = true
+    {{ $field.Name }}ArrayProperties.RawArray = &{{ $field_name }}
+{{- end }}
+
+{{- if $field.Array.IsPacked }}
+    {{ $field.Name }}ArrayProperties.IsPacked = true
+{{- end }}
+{{- if $field.Array.Length }}
+    {{ $field.Name }}ArrayProperties.FixedSize = int({{ goExpression $scope $field.Array.Length }})
+{{- else }}
+    {{ $field.Name }}ArrayProperties.IsAuto = true
 {{- end }}
 {{- if eq $traits "ztype.ObjectArrayTraits" }}
-    {{ $field_name }}.ArrayTraits.DefaultObject = new({{ goType $scope $type }})
+    {{ $field.Name }}ArrayProperties.ArrayTraits.DefaultObject = new({{ goType $scope $native.Type }})
 {{- end }}
