--- a/internal/generator/templates/packing_context_decode.go.tmpl
+++ b/internal/generator/templates/packing_context_decode.go.tmpl
@@ -36,7 +36,7 @@
     {{- $assign_str_rvalue := $field_name }}
 
     {{- if $field.Array }}
-    {{- template "array_init.go.tmpl" dict "pkg" $scope "field_name" $assign_str_lvalue "array" $field.Array "type" $native.Type }}
+    {{- template "array_init.go.tmpl" dict "pkg" $scope "field_name" $assign_str_lvalue "field" $field "native" $native }}
     {{- end }}
     
     {{- template "decode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field }}
@@ -44,11 +44,16 @@
     {{- if $field.Array }}
         {{- if not $field.Array.IsPacked }}
             // This array is implicitly packed, because its parent object is packed
-            {{ $assign_str_rvalue }}.IsPacked = true
+            {{ $field.Name }}ArrayProperties.IsPacked = true
         {{- end }}
-        if err = {{ $assign_str_rvalue }}.UnmarshalZserio(r); err != nil {
+        if err = {{ $field.Name }}ArrayProperties.UnmarshalZserio(r); err != nil {
             return err
         }
+        {{- if $native.IsMarshaler }}
+        for _, elem := range {{ $field.Name }}PtrArray {
+            {{ $assign_str_lvalue }} = append({{ $assign_str_lvalue }}, *elem)
+        }
+        {{- end }}
 
     {{- else if eq $native.Type.Name "bool" }}
         {{- if $native.RequiresCast }}
