--- a/internal/generator/templates/bitsizeof.go.tmpl
+++ b/internal/generator/templates/bitsizeof.go.tmpl
@@ -22,13 +22,27 @@
 {{- if not (eq $field.Alignment 0) }}
     endBitPosition += ztype.CountAlignBits(endBitPosition, {{ $field.Alignment }})
 {{- end }}
-{{if $field.IsOptional}}
+
+{{- if $field.IsOptional}}
     endBitPosition += 1
     if v.{{ $field.Name }} != nil {
-    {{- template "builtin_bitsizeof.go.tmpl" dict "pkg" $scope "name" $name "native" $native "isarray" $field.Array }}
+{{- end }}
+
+{{- if $field.Array }}
+    {{- template "array_init.go.tmpl" dict "pkg" $scope "field_name" $name "field" $field "native" $native }}
+    {{- if $native.IsMarshaler }}
+    // The array type is a zserio object. The array traits expect array of
+    // pointers, so convert from array of struct to array of struct pointers
+    for index, _ := range {{ $name }} {
+        {{ $field.Name }}PtrArray = append({{ $field.Name }}PtrArray, &{{ $name }}[index])
     }
-{{- else}}
-    {{- template "builtin_bitsizeof.go.tmpl" dict "pkg" $scope "name" $name "native" $native "isarray" $field.Array }}
+    {{- end }}
+    {{- $name = printf "%sArrayProperties" $field.Name }}
+{{- end }}
+{{ template "builtin_bitsizeof.go.tmpl" dict "pkg" $scope "name" $name "native" $native "isarray" $field.Array }}
+
+{{- if $field.IsOptional}}
+    }
 {{- end}}
 {{- if $field.OptionalClause }}
     }
