--- a/internal/generator/templates/decode_compound_parameters.go.tmpl
+++ b/internal/generator/templates/decode_compound_parameters.go.tmpl
@@ -1,3 +1,4 @@
+
 {{ $scope := .pkg }}
 {{ $field := .field }}
 {{ $native := goNativeType $scope $field.Type }}
@@ -5,7 +6,7 @@
 {{- if $field.Type.TypeArguments }}
     {{- $lvalue := printf "v.%s" $field.Name }}
     {{- if $field.Array }}
-        {{- $lvalue = printf "%s.ArrayTraits.DefaultObject" $lvalue }}
+        {{- $lvalue = printf "%sArrayProperties.ArrayTraits.DefaultObject" $field.Name }}
     {{- end }}
     {{- $type_parameter := getTypeParameter $scope $field.Type }}
     {{- range $i, $argument := $field.Type.TypeArguments }}
