--- a/internal/generator/templates/field_declaration.go.tmpl
+++ b/internal/generator/templates/field_declaration.go.tmpl
@@ -1,11 +1,8 @@
+
 {{- $scope := .pkg }}
 {{- $field := .field }}
 {{- $native := goNativeType $scope $field.Type }}
 {{- $go_type := goType $scope $field.Type }}
-{{ $field.Name }} {{ if $field.IsOptional }}*{{end}}
-
-{{- if $field.Array -}}
-    ztype.Array[{{if $native.IsMarshaler }}*{{ end }}{{ goType $scope $native.Type }}, {{ template "array_traits_type.go.tmpl" dict "pkg" $scope "type" $native.Type }}]
-{{- else -}}
-    {{ $go_type }}
-{{- end }}
+{{- $go_native_type := goType $scope $native.Type }}
+{{/* Arrays must use the native type, due to the restriction with the array traits */}}
+{{ $field.Name }} {{ if $field.IsOptional }}*{{end}}{{ if $field.Array }}[]{{ $go_native_type }}{{ else }}{{ $go_type }}{{ end }}
