Ensure correct Code Generation in Corner Cases
- This commit mainly fixes type casting if subtypes are used, for example:
- array of subtypes to basic types. Since the array traits only support
  basic types, the array needs to be copied in it's basic type format.
- array of subtypes to compound types. These types also need to be casted to
  the fundamental compound type, so that the array traits can use the
  Marshal/Unmarshal functions.
- Additionally, some minor issues were fixed that would cause build
  failures if optional types are combined with parameterized types.

--- a/internal/generator/templates/array_init.go.tmpl
+++ b/internal/generator/templates/array_init.go.tmpl
@@ -8,10 +8,15 @@
 {{ $field.Name }}ArrayProperties.ArrayTraits = {{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}
 
 {{- if $native.IsMarshaler }}
-    {{ $field.Name }}PtrArray := make([]*{{ goType $scope $native.Type }}, 0)
-    {{ $field.Name }}ArrayProperties.RawArray = &{{ $field.Name }}PtrArray
+    // the field type is a zserio object, which requires a list of struct 
+    // pointers.
+    {{ $field.Name }}ArrayProperties.RawArray = make([]*{{ goType $scope $native.Type }}, 0)
+{{- else if $native.RequiresCast }}
+    // the field type is a subtype, which requires to cast the subtype array
+    // to the basic type
+    {{ $field.Name }}ArrayProperties.RawArray = make([]{{ goType $scope $native.Type }}, 0)
 {{- else }}
-    {{ $field.Name }}ArrayProperties.RawArray = &{{ $field_name }}
+    {{ $field.Name }}ArrayProperties.RawArray = {{ $field_name }}
 {{- end }}
 
 {{- if $field.Array.IsPacked }}
