--- a/internal/generator/templates/encode.go.tmpl
+++ b/internal/generator/templates/encode.go.tmpl
@@ -35,6 +35,7 @@
     }
     if v.{{ $field.Name }} != nil {
 {{- end }}
+{{- template "encode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field "field_name" $field_name }}
 {{- if $field.Array }}
     {{- template "array_init.go.tmpl" dict "pkg" $scope "field_name" $field_name "field" $field "native" $native }}
     {{- if $field.Array.Length }}
@@ -43,15 +44,16 @@
         }
     {{- end }}
     {{- if $native.IsMarshaler }}
-    // The array type is a zserio object. The array traits expect array of
-    // pointers, so convert from array of struct to array of struct pointers
     for index, _ := range {{ $field_name }} {
-        {{ $field.Name }}PtrArray = append({{ $field.Name }}PtrArray, &{{ $field_name }}[index])
+        {{ $field.Name }}ArrayProperties.RawArray = append({{ $field.Name }}ArrayProperties.RawArray, {{if $native.RequiresCast }}(*{{ goType $scope $native.Type }})(&{{ $field_name }}[index]){{ else }}&{{ $field_name }}[index]{{ end }})
+    }
+    {{- else if $native.RequiresCast }}
+    for _, element := range {{ $field_name }} {
+        {{ $field.Name }}ArrayProperties.RawArray = append({{ $field.Name }}ArrayProperties.RawArray, {{ goType $scope $native.Type }}(element))
     }
     {{- end }}
     {{- $field_name = printf "%sArrayProperties" $field.Name }}
 {{- end }}
-{{- template "encode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field }}
 
 {{- if and (not $native.IsMarshaler) (not $field.Array) }}
     {{- if or (gt $native.Type.Bits 0) $native.Type.LengthExpression}}
