--- a/internal/generator/templates/bitsizeof.go.tmpl
+++ b/internal/generator/templates/bitsizeof.go.tmpl
@@ -28,13 +28,16 @@
     if v.{{ $field.Name }} != nil {
 {{- end }}
 
+{{- template "encode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field "field_name" $name }}
 {{- if $field.Array }}
     {{- template "array_init.go.tmpl" dict "pkg" $scope "field_name" $name "field" $field "native" $native }}
     {{- if $native.IsMarshaler }}
-    // The array type is a zserio object. The array traits expect array of
-    // pointers, so convert from array of struct to array of struct pointers
     for index, _ := range {{ $name }} {
-        {{ $field.Name }}PtrArray = append({{ $field.Name }}PtrArray, &{{ $name }}[index])
+        {{ $field.Name }}ArrayProperties.RawArray = append({{ $field.Name }}ArrayProperties.RawArray, {{if $native.RequiresCast }}(*{{ goType $scope $native.Type }})(&{{ $name }}[index]){{ else }}&{{ $name }}[index]{{ end }})
+    }
+    {{- else if $native.RequiresCast }}
+    for _, element := range {{ $name }} {
+        {{ $field.Name }}ArrayProperties.RawArray = append({{ $field.Name }}ArrayProperties.RawArray, {{ goType $scope $native.Type }}(element))
     }
     {{- end }}
     {{- $name = printf "%sArrayProperties" $field.Name }}
