--- a/internal/generator/templates/decode.go.tmpl
+++ b/internal/generator/templates/decode.go.tmpl
@@ -64,9 +64,13 @@
         return err
     }
     {{- if $field.Array }}
+        {{- if or $native.IsMarshaler $native.RequiresCast }}
+        {{- $element := "elem" }}
         {{- if $native.IsMarshaler }}
-        for _, elem := range {{ $field.Name }}PtrArray {
-            {{ $assign_str_lvalue }} = append({{ $assign_str_lvalue }}, *elem)
+            {{- $element = "*elem" }}
+        {{- end }}
+        for _, elem := range {{ $field.Name }}ArrayProperties.RawArray {
+            {{ $assign_str_lvalue }} = append({{ $assign_str_lvalue }}, {{ if $native.RequiresCast }}{{ goType $scope $field.Type }}({{ $element }}){{ else }}{{ $element }}{{ end }})
         }
         {{- end }}
     {{- end }}
