--- a/internal/generator/templates/field_declaration.go.tmpl
+++ b/internal/generator/templates/field_declaration.go.tmpl
@@ -3,6 +3,5 @@
 {{- $field := .field }}
 {{- $native := goNativeType $scope $field.Type }}
 {{- $go_type := goType $scope $field.Type }}
-{{- $go_native_type := goType $scope $native.Type }}
 {{/* Arrays must use the native type, due to the restriction with the array traits */}}
-{{ $field.Name }} {{ if $field.IsOptional }}*{{end}}{{ if $field.Array }}[]{{ $go_native_type }}{{ else }}{{ $go_type }}{{ end }}
+{{ $field.Name }} {{ if $field.IsOptional }}*{{end}}{{ if $field.Array }}[]{{ end }}{{ $go_type }}
