--- a/internal/generator/templates/enum.go.tmpl
+++ b/internal/generator/templates/enum.go.tmpl
@@ -41,7 +41,7 @@ func (v *{{ $enum.Name}}) MarshalZserio(w *bitio.CountWriter) error {
 }
 
 // UnmarshalZserio implements the zserio.Unmarshaler interface.
-func (v *{{ $enum.Name }}) UnmarshalZserio(r *bitio.CountReader) error {
+func (v *{{ $enum.Name }}) UnmarshalZserio(r zserio.Reader) error {
     {{- if not $native.Type.IsBuiltin }}
       panic("only builtin types supported")
     {{- else }}
@@ -92,7 +92,7 @@ func (v *{{ $enum.Name}}) ZserioInitPackingContext(contextNode *zserio.PackingCo
 }
 
 
-func (v *{{ $enum.Name}}) UnmarshalZserioPacked(contextNode *zserio.PackingContextNode, r *bitio.CountReader) error {
+func (v *{{ $enum.Name}}) UnmarshalZserioPacked(contextNode *zserio.PackingContextNode, r zserio.Reader) error {
   context, ok := contextNode.Context.(*ztype.DeltaContext[{{ goType $scope $native.Type }}])
   if !ok {
     return errors.New("unsupported packing context type")
