--- a/internal/generator/templates/packing_context_encode.go.tmpl
+++ b/internal/generator/templates/packing_context_encode.go.tmpl
@@ -30,7 +30,7 @@
         if {{ goExpression $scope $field.OptionalClause }} {
     {{- end }}
     {{- if not (eq $field.Alignment 0) }}
-        if err := ztype.AlignWriter(w, {{ $field.Alignment }}); err != nil {
+        if err := w.Align({{ $field.Alignment }}); err != nil {
             return err
         }
     {{- end }}
