--- a/internal/generator/templates/bitmask.go.tmpl
+++ b/internal/generator/templates/bitmask.go.tmpl
@@ -26,7 +26,7 @@ func (v *{{ $bitmask.Name}}) LoadDefaultValues() error {
 }
 
 // MarshalZserio implements the zserio.Marshaler interface.
-func (v *{{ $bitmask.Name}}) MarshalZserio(w *bitio.CountWriter) error {
+func (v *{{ $bitmask.Name}}) MarshalZserio(w zserio.Writer) error {
     {{- if not $native.Type.IsBuiltin }}
       panic("only builtin types supported")
     {{- else if eq $native.Type.Bits 0 }}
@@ -97,7 +97,7 @@ func (v *{{ $bitmask.Name}}) UnmarshalZserioPacked(contextNode *zserio.PackingCo
   }
 }
 
-func (v *{{ $bitmask.Name}}) MarshalZserioPacked(contextNode *zserio.PackingContextNode, w *bitio.CountWriter) error {
+func (v *{{ $bitmask.Name}}) MarshalZserioPacked(contextNode *zserio.PackingContextNode, w zserio.Writer) error {
   context, ok := contextNode.Context.(*ztype.DeltaContext[{{ goType $scope $native.Type }}])
   if !ok {
     return errors.New("unsupported packing context type")
