Fix passing of parameters for optional structs
- Passing parameters to optional fields would cause a segfault, because
  the field got values assigned before it was created. This commit
  fixes this by generating the correct names when passing parameters
  to an optional field.

--- a/internal/generator/templates/decode.go.tmpl
+++ b/internal/generator/templates/decode.go.tmpl
@@ -59,7 +59,7 @@
         {{- $assign_str_rvalue = printf "%sArrayProperties" $field.Name }}
         {{- template "array_init.go.tmpl" dict "pkg" $scope "field_name" $assign_str_lvalue "field" $field "native" $native }}
     {{- end }}
-    {{- template "decode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field }}
+    {{- template "decode_compound_parameters.go.tmpl" dict "pkg" $scope "field" $field "field_name" $assign_str_lvalue }}
     if err = {{ $assign_str_rvalue }}.UnmarshalZserio(r); err != nil {
         return err
     }
