--- a/internal/generator/templates/decode_compound_parameters.go.tmpl
+++ b/internal/generator/templates/decode_compound_parameters.go.tmpl
@@ -1,16 +1,15 @@
 
 {{ $scope := .pkg }}
 {{ $field := .field }}
-{{ $native := goNativeType $scope $field.Type }}
+{{- $field_name := .field_name }}
 
 {{- if $field.Type.TypeArguments }}
-    {{- $lvalue := printf "v.%s" $field.Name }}
     {{- if $field.Array }}
-        {{- $lvalue = printf "%sArrayProperties.ArrayTraits.DefaultObject" $field.Name }}
+        {{- $field_name = printf "%sArrayProperties.ArrayTraits.DefaultObject" $field.Name }}
     {{- end }}
     {{- $type_parameter := getTypeParameter $scope $field.Type }}
     {{- range $i, $argument := $field.Type.TypeArguments }}
         {{- $current_type_parameter := index $type_parameter $i }}
-        {{ $lvalue }}.{{ $current_type_parameter.Name}} = {{ goType $scope $current_type_parameter.Type }}({{ goExpression $scope $argument }})
+        {{ $field_name }}.{{ $current_type_parameter.Name}} = {{ goType $scope $current_type_parameter.Type }}({{ goExpression $scope $argument }})
     {{- end}}
 {{- end }}
