Fix Choice Selector Type Lookup
- Renamed choice selector expression from "Expression" to "SelectorExpression".
- When evaluating the choice, a choice condition will now be automatically
  converted from a Symbol expression (i.e. a simple text, such as "VALUE"
  is given) to a dot expression, which includes the full typename:
  "VALUE" -> "type.VALUE".
  Thas solves tha ambiguity problem, because with the dot expression, the
  type is fully identified.
- Minor improvements in the choice template file (remove unnecessary lines)

--- a/internal/generator/templates/choice.go.tmpl
+++ b/internal/generator/templates/choice.go.tmpl
@@ -1,5 +1,6 @@
 {{ $scope := .pkg }} 
 {{ $choice := .choice }}
+{{- $expr := $choice.SelectorExpression }}
 
 {{ $choice.Comment }}
 type {{ $choice.Name }} struct {
@@ -41,7 +42,6 @@ func (v *{{ $choice.Name}}) LoadDefaultValues() error {
 // MarshalZserio implements the zserio.Marshaler interface.
 func (v *{{ $choice.Name}}) MarshalZserio(w *bitio.CountWriter) error {
   var err error
-{{- $expr := $choice.Expression }}
   switch (v.{{ $expr.ResultSymbol.Symbol.Name }}) {
 {{- range $case := $choice.Cases }}
   {{- if .Field }}
@@ -63,7 +63,6 @@ func (v *{{ $choice.Name}}) MarshalZserio(w *bitio.CountWriter) error {
 // UnmarshalZserio implements the zserio.Unmarshaler interface.
 func (v *{{ $choice.Name}}) UnmarshalZserio(r *bitio.CountReader) error {
     var err error
-{{- $expr := $choice.Expression }}
   switch (v.{{ $expr.ResultSymbol.Symbol.Name }}) {
 {{- range $case := $choice.Cases }}
   {{- if .Field }}
@@ -85,7 +84,6 @@ func (v *{{ $choice.Name}}) UnmarshalZserio(r *bitio.CountReader) error {
 // ZserioBitSize implements the zserio.Marshaler interface.
 func (v *{{ $choice.Name}}) ZserioBitSize(bitPosition int) (int, error) {
   endBitPosition := bitPosition
-{{- $expr := $choice.Expression }}
   switch (v.{{ $expr.ResultSymbol.Symbol.Name }}) {
 {{- range $case := $choice.Cases }}
   {{- if .Field }}
