Introduce our own Reader and Writer implementations
Summary:
- Add a Reader implementation.
- Add a Writer implementation.
- Use the reader and writer everywhere.
- Move the aligning functions out of ztype and add tests.

--- a/internal/generator/templates/encode.go.tmpl
+++ b/internal/generator/templates/encode.go.tmpl
@@ -25,7 +25,7 @@
     if {{ goExpression $scope $field.OptionalClause }} {
 {{- end }}
 {{- if not (eq $field.Alignment 0) }}
-    if err := ztype.AlignWriter(w, {{ $field.Alignment }}); err != nil {
+    if _, err := w.Align({{ $field.Alignment }}); err != nil {
         return err
     }
 {{- end }}
