Use interfaces instead of structs in Marshaling interfaces
After the introduction of the new writer struct, it seems that there is
no performance penalty to use interfaces in the interface definitions
and the generated code. This commit is doing a minimum amount of things
in order to keep things tidy and be easy to revert at the same time.

--- a/internal/generator/templates/choice.go.tmpl
+++ b/internal/generator/templates/choice.go.tmpl
@@ -40,7 +40,7 @@ func (v *{{ $choice.Name}}) LoadDefaultValues() error {
 }
 
 // MarshalZserio implements the zserio.Marshaler interface.
-func (v *{{ $choice.Name}}) MarshalZserio(w *zserio.Writer) error {
+func (v *{{ $choice.Name}}) MarshalZserio(w zserio.Writer) error {
   var err error
   switch (v.{{ $expr.ResultSymbol.Symbol.Name }}) {
 {{- range $case := $choice.Cases }}
@@ -61,7 +61,7 @@ func (v *{{ $choice.Name}}) MarshalZserio(w *zserio.Writer) error {
 }
 
 // UnmarshalZserio implements the zserio.Unmarshaler interface.
-func (v *{{ $choice.Name}}) UnmarshalZserio(r *zserio.Reader) error {
+func (v *{{ $choice.Name}}) UnmarshalZserio(r zserio.Reader) error {
     var err error
   switch (v.{{ $expr.ResultSymbol.Symbol.Name }}) {
 {{- range $case := $choice.Cases }}
@@ -133,7 +133,7 @@ func (v *{{ $choice.Name}}) ZserioInitPackingContext(contextNode *zserio.Packing
   return nil
 }
 
-func (v *{{ $choice.Name}}) UnmarshalZserioPacked(contextNode *zserio.PackingContextNode, r *zserio.Reader) error {
+func (v *{{ $choice.Name}}) UnmarshalZserioPacked(contextNode *zserio.PackingContextNode, r zserio.Reader) error {
 {{- if $choice.Cases }}
     var err error
     childrenNodes := contextNode.GetChildren()
@@ -157,7 +157,7 @@ func (v *{{ $choice.Name}}) UnmarshalZserioPacked(contextNode *zserio.PackingCon
     return nil
 }
 
-func (v *{{ $choice.Name}}) MarshalZserioPacked(contextNode *zserio.PackingContextNode, w *zserio.Writer) error {
+func (v *{{ $choice.Name}}) MarshalZserioPacked(contextNode *zserio.PackingContextNode, w zserio.Writer) error {
 {{- if $choice.Cases }}
     var err error
     childrenNodes := contextNode.GetChildren()
