Implement Code Generation for Constants
- This commit will implement the generation of constants, by
  doing the following:
- The value expression of consts are now evaluated.
- String literal expressions are now supported.
- Constants are now evaluated.
- Constant names are capitalized.
- Constant types are actually generated in Go.

--- a/internal/generator/templates/package.go.tmpl
+++ b/internal/generator/templates/package.go.tmpl
@@ -1,5 +1,12 @@
 {{ $scope := .pkg }}
 
+const (
+{{- range $name, $constant := .pkg.Consts }}
+    {{ $constant.Comment }}
+    {{ $constant.Name }} {{ goType $scope $constant.Type }} = {{ goExpression $scope $constant.ValueExpression }} 
+{{- end }}
+)
+
 {{- range $subtype := .pkg.Subtypes }}
 type {{ $subtype.Name }} {{ goType $scope .Type }}
 {{- end }}
