--- a/internal/generator/templates/packing_context_encode.go.tmpl
+++ b/internal/generator/templates/packing_context_encode.go.tmpl
@@ -66,28 +66,13 @@
         return err
     }
 
-{{- else if eq $native.Type.Name "bool" }}
-    if err := ztype.WriteBool(w, {{ if $native.RequiresCast }}bool({{end}}{{ $field_name }}{{ if $native.RequiresCast }}){{end}}); err != nil {
-        return err
-    } 
-
-{{- else if eq $native.Type.Name "extern" }}
-    if err := ztype.WriteExtern(w, {{ $field_name }}); err != nil {
-        return err
-    }
-
-{{- else if eq $native.Type.Name "string" }}
-    if err := ztype.WriteString(w, {{ $field_name }}); err != nil {
-        return err
-    }
-
 {{- else if $native.IsMarshaler }}
     if err := {{ $field_name }}.MarshalZserioPacked(childrenNodes[{{ $index }}], w); err != nil {
         return err
     }
 
 
-{{- else}}
+{{- else if isDeltaPackable $scope $native.Type }}
     if field{{ $field.Name }}Context, ok := childrenNodes[{{ $index }}].Context.(*ztype.DeltaContext[{{ goType $scope $native.Type }}]); !ok {
         return errors.New("unknown context type")
     } else {
@@ -95,6 +80,12 @@
             return err
         }
     }
+
+{{- else }}
+    if err := ztype.Write{{ title $native.Type.Name }}(w, {{ if $native.RequiresCast }}{{ goType $scope $native.Type }}({{end}}{{ $field_name }}{{ if $native.RequiresCast }}){{end}}); err != nil {
+        return err
+    } 
+
 {{- end}}
 
 {{- if $field.IsOptional}}
