Implement Stringer, Valuer and Scanner
Implementing these allows loading and storing of enum values in SQL
databases. The interface is moduled on the popular stringer/enumer
packages.

--- a/internal/generator/templates/preamble.go.tmpl
+++ b/internal/generator/templates/preamble.go.tmpl
@@ -4,7 +4,9 @@ package {{ goPackageName .pkg.Name }}
 
 {{ $root := .rootPackage }}
 import (
-	"errors"
+    "errors"
+    "fmt"
+    "database/sql/driver"
     "github.com/icza/bitio"
     zserio "github.com/woven-planet/go-zserio"
     "github.com/woven-planet/go-zserio/ztype"
