Add tests for enum changes

--- a/internal/generator/templates/enum.go.tmpl
+++ b/internal/generator/templates/enum.go.tmpl
@@ -18,7 +18,7 @@ const (
 
 var _{{ $enum.Name }}Names = []string{
 {{- range $ix, $item := $enum.Items }}
-    "{{ $enum.Name }}{{ $item.Name }}",
+    "{{ $item.Name }}",
 {{- end }}
 }
 
