Add Support for zserio Bytes Type, added in zserio 2.9.0
- In zserio version 2.9.0, the Bytes type was added. It is a built-in type
  that stores byte buffers.
- Unlike extern, bytes stores full bytes, and does not support incomplete
  bytes.

--- a/internal/generator/templates/builtin_bitsizeof.go.tmpl
+++ b/internal/generator/templates/builtin_bitsizeof.go.tmpl
@@ -21,6 +21,7 @@
         {{- else if eq $native.Type.Name "float32" }} endBitPosition += 32
         {{- else if eq $native.Type.Name "float64" }} endBitPosition += 64
         {{- else if eq $native.Type.Name "extern" }} endBitPosition += int({{ $name }}.BitSize)
+        {{- else if eq $native.Type.Name "bytes" }} endBitPosition += 8 * int({{ $name }}.ByteSize)
         {{- else }}
             if delta, err := 
             {{- if eq $native.Type.Name "varuint" }} ztype.UnsignedBitSize({{ $name }}, 9)
